[build-system]

requires = [
   "setuptools",
   "wheel"
]

build-backend = "setuptools.build_meta"


[project]

name = "ITV_visual_ITVision"
version = "0.1.0"
authors = [
  { name="ITVizion", email="support@itvizion.com" },
]
description = "Plotting add-ons for Seeq platform"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"